syntax = "proto3";

package GrpcConferenceContractServiceNew;

service NewConferenceContractService{
 //================V2.0 Begin===================

 //勾选套餐接口 参数：conferenceId，上级分类Id（ContractTypeId）,Year,IsGive(是否赠送)
 rpc new_GetServicePack(new_GetServicePackRequest) returns(new_GetServicePackResponse){}




//付费合同和赠送合同添加二级合同（套餐）接口。
//参数：1.公司信息（先根据公司名称判断是否有公司一级合同，若没有，则先创建一级合同，在创建二级合同.若已经存在一级合同，则只创建二级合同）
//		2.套餐信息
//		3.业务员
//		4.子合同数
//		5.合同状态
//注：付款状态、合同状态需要及时更新
//返回：是否插入成功
rpc  new_AddServicePack(new_ServicePackStruct) returns(modifyResponse){}


//付费合同添加二级合同（套餐）折扣 接口。
//参数：1.公司信息（先根据公司名称判断是否有公司一级合同，若没有，则先创建一级合同，在创建二级合同.若已经存在一级合同，则只创建二级合同）
//		2.套餐信息
//		3.业务员
//		4.子合同数
//		5.合同状态,
//		6.现价
//返回：是否插入成功
rpc new_AddServicePackDiscount(new_ServicePackStructDiscount) returns(modifyResponse){}

//添加个人合同
rpc new_AddPersonContract(new_AddPersonContractRequest) returns(modifyResponse){}




// //当公司、套餐、业务员、合同状态、套餐价格、年份都一致时，更新子合同数（原来的子合同数+新加的子合同数）注：点击确定按钮之前先查询是否有和该套餐一致的合同
// rpc new_ModifyServicePack(new_ServicePackStruct) returns(modifyResponse){}

//根据公司名称获取公司信息 参数：公司名 返回：公司信息
rpc new_GetCompanyInfoByCompanyName(new_CompanyNameRequest) returns (CompanyInfoResponse){}







//获取付费合同和赠送合同的列表（二级合同）
//参数：1.请求页码
//		2.每页条数
//		3.查询条件
rpc new_GetServicePackList(new_GetServicePackListRequest) returns(new_GetServicePackListResponse){}


//获取一级合同列表（公司合同）
//参数：1.请求页码
//		2.每页条数
//		3.查询条件
rpc new_GetCompanyContractList(new_GetCompanyContractListRequest) returns (new_GetCompanyContractListResponse){}

//获取三级合同列表（个人合同）
//参数：1.请求页码
//		2.每页条数
//		3.查询条件
rpc new_GetPersonContractList(new_GetPersonContractListRequest) returns (new_GetPersonContractListResponse){}


//根据合同号公司报道通知书
rpc new_GetCompanyNoticeOfReportByContractNumber(new_GetCompanyNoticeOfReportByContractNumberRequest) returns (new_GetCompanyNoticeOfReportByContractNumberResponse){}

//根据个人合同号得到个人报道通知书
rpc new_GetPersonNoticeOfReportByContractNumber(new_GetPersonNoticeOfReportByContractNumberRequest) returns(new_GetPersonNoticeOfReportByContractNumberResponse){}

//根据个人合同获取行程一览表
rpc new_GetScheduleList(new_GetScheduleListRequest) returns (new_GetScheduleListResponse){}

//添加行程一览表
rpc new_AddSchedule(new_AddScheduleRequest) returns(modifyResponse){}
//================V2.0 End===================
}


message empty{
}

message idRequest{
  string id=1;
}


//=================v2.0 Begin============

//付费合同和赠送合同添加二级合同时需要传的参数
message new_ServicePackStruct{
//二级合同信息
string ContractId=1;
string ConferenceContractId=2;
string CompanyServicePackId=3;
string ConferenceId=4;
string CompanyId=5;
string ComNameTranslation=6;
string ComContractNumber=7;
string Country=8;
string AddressTranslation=9;
string ComPrice=10;
int32 MaxContractNumber=11;
int32 MaxContractNumberSatUse=12;
bool CCIsdelete=13;
int32 EnterpriseType=14;
bool IsVerify=15;
string Owerid=16;
string Ower=17;
string ContractCode=18;
bool IsCheckIn=19;
string PPTUrl=20;
string ContractStatusCode=21;
string ConferenceName=22;
string OtherOwnerId=23;
string OtherOwner=24;
string CreatedOn=25;
string CreatedBy=26;
string ModifiedOn=27;
string ModifiedBy=28;
string Year=29;

}

//添加付费合同的折扣信息时需要传入的参数
message new_ServicePackStructDiscount{
 new_ServicePackStruct model=1;
 float Discount=2;
 string PriceAfterDiscountRMB=3;
 string PriceAfterDiscountUSD=4;
}


message personContractStruct{
string PersonContractId=1;
 string ContractId=2;
 string ConferenceId=3;
 string MemberPK=4;
 string MemTranslation=5;
 bool PCIsdelete=6;
 string CTypeCode=7;
 bool  IsCheckIn=8; 
 bool  IsSendEmail=9;
 bool  IsModify=10;
 bool  IsFianceRecord=11;
 string InviteCodeId=12;
 bool  IsInviteCode=13;
 bool  IsCommitAbstract=14;
 bool  IsPrint=15;
 string Owerid=16;
 string Ower=17;
 string CreatedOn=18;
 string CreatedBy=19;
 string ModifiedOn=20;
 string ModefieldBy=21;
 string CompanyServicePackId=22;
 string ConferenceContractId=23;
 string PerPrice=24;
 string PaidAmount=25;
 string OtherOwnerId=26;
 string OtherOwner=27;
 string Year=28;
}

//添加个人合同
message new_AddPersonContractRequest{
 personContractStruct person=1;
 string CompanyId=2;
 string ComPrice=3;
 string ContractStatusCode=4;
 string ContractCode=5;
 new_ServicePackStruct companyContractModel=6;

}

//修改操作返回的结果
message modifyResponse{
  bool isSuccess=1;
  string msg=2;
}

message CompanyNameRequest{
//公司名
  string name=1;
}

//公司信息
message CompanyInfoResponse{
//公司中文名
 string compnyName=1;
 //公司英文名
 string companyNameEn=2;
 //公司日文名
 string companyNameJp=3;
 //邮箱
 string Email=4;
 //公司Id
 string companyId=5;
}

//付费合同列表页码的搜索与请求条件
message new_GetServicePackListRequest{
 message  new_GetServicePackListSearch{
     //年份
    string year=1;
    //会议Id
    string conferenceId=2;
    //套餐Id
    string servicePackId=3;
    //公司名
    string companyName=4;
    //合同号
    string contractNumber=5;
    //业务员
    string owner=6;
    //是否为无折扣合同
    bool isDiscount=7;
    //参会人员是否达到上限
    bool isMaxCount=8;
  }
//请求页码
  int32 page=1;
  //每页数据条数
  int32 pageSize=2;
  //查询条件
  new_GetServicePackListSearch search=3;
}

//得到付费合同和赠送合同列表
message new_GetServicePackListStruct{
 //合同号
 string contractNumber=1;
 //公司中文名
 string companyNameCn=2;
 //公司英文名
 string companyNameEn=3;
 //内资还是外资
 string domesticOrForeign=4;
 //参会类型
 string servicePack=5;
 //应付费
 string pay=6;
 //子合同数
 string contractCount=7;
 //已填子合同数
 int32 filledContractCount=8;
 //业务员
 string owner=9;
 //邀请码
 string inviteCode=10;
 //合同状态
 string contractStatus=11;
  //创建人
  string createdBy=12;
  //创建时间
  string createdOn=13;
  //修改人
  string modifiyBy=14;
  //修改时间
  string modifyOn=15;

}

//获取付费合同和赠送合同的列表
message new_GetServicePackListResponse{
 repeated new_GetServicePackListStruct listdata=1;
  int32 total=2;
}

//获取公司合同（一级合同）时传入的参数
message new_GetCompanyContractListRequest{
 message  new_GetCompanyContractListSearch{
     //年份
    string year=1;
    //会议Id
    string conferenceId=2;
    //公司名
    string companyName=3;
    //合同号
    string contractNumber=4;
    //业务员
    string owner=5;
  }
//请求页码
  int32 page=1;
  //每页数据条数
  int32 pageSize=2;
  //查询条件
  new_GetCompanyContractListSearch search=3;
}

//得到公司合同列表（一级合同）
message new_GetCompanyContractListResponse{
  //合同号
  string contractNumber=1;
  //公司中文名
  string companyNameCn=2;
  //公司英文名
  string companyNameEn=3;
  //内资还是外资
  string domesticOrForeign=4;
  //应付费
  string pay=5;
  //实付费
  string paid=6;
  //参会年份
  string year=7;
  //是否发送邮件
  bool isSendEmail=8;
  //业务员
  string owner=9;
  //邀请码
  string inviteCode=10;
  //合同状态
  string contractStatus=11;
  //付款状态
  string payStatus=12;
   //创建人
  string createdBy=13;
  //创建时间
  string createdOn=14;
  //修改人
  string modifiyBy=15;
  //修改时间
  string modifyOn=16;
}


//获取个人合同（三级合同）时传入的参数
message new_GetPersonContractListRequest{
message  new_GetPersonContractListSearch{
//年份
    string year=1;
    //会议Id
    string conferenceId=2;
    //套餐Id
    string servicePackId=3;
    //公司名
    string companyName=4;
    //合同号
    string contractNumber=5;
    //业务员
    string owner=6;
    //姓名
    bool name=7;
    //邮箱
    bool email=8;
     //创建人
  string createdBy=9;
  //创建时间
  string createdOn=10;
  //修改人
  string modifiyBy=11;
  //修改时间
  string modifyOn=12;
    }
   // 请求页码
  int32 page=1;
  //每页数据条数
  int32 pageSize=2;
  //查询条件
  new_GetPersonContractListSearch search=3;
}

//获取个人合同信息（三级）
message new_GetPersonContractListResponse{
 //合同号
 string contractNumber=1;
 //姓名中文
 string nameCn=2;
 //姓名英文
 string nameEn=3;
 //公司中文名
 string companyNameCn=4;
 //公司英文名
 string companyNameEn=5;
 //职务
 string position=6;
 //邮箱
 string email=7;
 //手机
 string mobile=8;
 //参会类型
 string servicePack=9;
 //应付费
 string pay=10;
 //已付费
 string paid=11;
 //业务员
 string owner=12;
 //是否发送邮件
 bool isSendEmail=13;
 //是否打印
 bool isPrint=14;
  //创建人
  string createdBy=15;
  //创建时间
  string createdOn=16;
  //修改人
  string modifiyBy=17;
  //修改时间
  string modifyOn=18;
}

//获取行程一览表传入的参数
message new_GetScheduleListRequest{
 //合同号
 string personContractNumber=1;
}
message new_GetScheduleListResponse{
 //个人合同id
 string personContractId=1;
 //个人合同号
 string personContractNumber=2;
 //参会类型
 string servicePack=3;
 //姓名
 string name=4;
 //称谓
 string title=5;
 //职位
 string positin=6;
 //手机
 string mobile=7;
 //邮箱
 string email=8;
 //公司名
 string companyName=9;
 //参加活动名称
 string activityName=10;
 //参加活动的地点
 string activityVune=11;
 //参加活动的时间
 string activityTime=12;
 //业务员
 string owner=13;
 //业务员邮箱
 string ownerEmail=14;
 //业务员手机
 string ownerMobile=15;
 //业务员地址
 string ownerAddress=16;
 //创建时间
 string crteatedOn=17;
 //创建人
 string createdBy=18;
 //修改时间
 string modifyOn=19;
 //修改人
 string modifyBy=20;
}
message new_AddScheduleRequest{
 //个人合同id
 string personContractId=1;
 //个人合同号
 string personContractNumber=2;
 //参会类型
 string servicePack=3;
 //姓名
 string name=4;
 //称谓
 string title=5;
 //职位
 string positin=6;
 //手机
 string mobile=7;
 //邮箱
 string email=8;
 //公司名
 string companyName=9;
 //参加活动名称
 string activityName=10;
 //参加活动的地点
 string activityVune=11;
 //参加活动的时间
 string activityTime=12;
 //业务员
 string owner=13;
 //业务员邮箱
 string ownerEmail=14;
 //业务员手机
 string ownerMobile=15;
 //业务员地址
 string ownerAddress=16;
 //创建时间
 string crteatedOn=17;
 //创建人
 string createdBy=18;
 //修改时间
 string modifyOn=19;
 //修改人
 string modifyBy=20;
}

message new_GetCompanyNoticeOfReportByContractNumberRequest{
	string contractNumber=1;
	string year=2;
}


message ConferenceStruct{
	//会议主键id
	string ConferenceID = 1;
	//父级id
	string ParentID = 2;
	//会议名称
	Translation Translation = 3;
	//会议地点id
	string CFAddressPK = 4;
	//会议时间段
	string StartDate = 5;    
	//开始时间
	string StartDateTime = 6;   
	//年份
	string Year = 7;
	//排序
	string Sort = 8;
	//英文缩写
	string Abbreviation = 9;
	//会议简介  格式{"CN":"123","EN":"123"}
	string ConferenceIntroduce = 10;
	//创建时间
	string CreatedOn = 11;
	//创建人
	string CreatedBy = 12;
	//修改时间
	string ModifiedOn = 13;
	//修改人
	string ModifiedBy = 14;
	//层级
	int32 Level = 15;
	//时间段
	string TimeRange = 16;
	//是否前台显示
	bool ShowOnFront = 17;
	//会议室对象
	CFAddressStruct CFAddress = 18;
	//作为会议申请的筛选
	bool ApplySearch = 19;
}

message CFAddressStruct{
	//会议地点主键id
	string CFAddressPK = 1;
	//会议地点
	Translation Translation = 2;
	//邮编
	string PostCode = 3;
	//国家
	string Country = 4; 
	//创建时间
	string CreatedOn = 5;
	//创建人
	string CreatedBy = 6;
	//修改时间
	string ModifiedOn = 7;
	//修改人
	string ModifiedBy = 8;
}

message ApplyConferenceStruct {
  //主键
  string Id = 1;
  string PersonContractId = 2;
  string MemberPK = 3;
  string SessionConferenceId = 4;
  //是否确认
  bool IsConfirm = 5;
  string CompanyId = 6;
  //多个标签Code，用“，”分隔
  string TagTypeCodes = 7;
  //备注
  string RemarkTranslation = 8;
  //年份
  string Year = 9;
  //SessionConferenceId列表
  repeated string SessionConferenceIds = 10;
  //IsParticularConf
  bool IsParticularConf = 11;
  //业务员id
  string Owerid = 12;
}

message CompanyContractStruct {
  //主键
  string ContractId = 1;
  //CompanyServicePackId
  string CompanyServicePackId = 2;
  //CompanyId
  string CompanyId = 3;
  //string  ComNameTranslation = 4;
  //公司中英文名
  ComNameTranslationStruct ComNameTranslation = 4;
  //二级合同号
  string ComContractNumber = 5;
  //国家
  string Country = 6;
  //string AddressTranslation = 7;
  //地址中英文
  AddressTranslationStruct AddressTranslation = 7;
  //最大合同数
  string MaxContractNumber = 8;
  //是否删除
  bool CCIsdelete = 9;
  //0代表内资;1代表外资
  int32 EnterpriseType = 10; 
  //是否审核
  bool IsVerify = 11;
  //业务员id
  string Owerid = 12; 
  //业务员姓名
  string Ower = 13; 
  string CreatedOn = 14;
  string CreatedBy = 15;
  string ModefieldOn = 16;
  string ModefieldBy = 17;
  //套餐对象
  CompanyServicePackStruct CompanyServicePack = 18;
  //二级折扣合同列表
  repeated DelegateServicePackDiscountStruct dlistdata = 19;
  //CF2019SNEC0010CW合同编号最后二位Code（CW/CS,EW/ES）C中资 E外资 S后台合同 W前台合同
  string ContractCode = 20;
  //ConferenceId
  string ConferenceId = 21;
  //会议名称
  string ConferenceName = 22;
  //是否报道
  bool IsCheckIn = 23;
  //PPTUrl
  string PPTUrl = 24;
  //合同状态Code
  string ContractStatusCode = 25;
  //ConferenceContractId
  string ConferenceContractId = 26;
  //个人合同列表
  repeated PersonContractStruct plistdata = 27;
  //二级合同价格
  string ComPrice = 28;
}

message CompanyServicePackStruct {
  //主键
  string CompanyServicePackId = 1;
  //ContractTypeId
  string ContractTypeId = 2;
  //排序
  int32 Sort = 3;
  //套餐名称
  TranslationStruct Translation = 4;
  //人民币
  string PriceRMB = 5;
  //美金
  string PriceUSD = 6;
  //是否在前端显示
  bool IsShownOnFront = 7;
  string CreatedOn = 8;
  string CreatedBy = 9;
  string ModefieldOn = 10;
  string ModefieldBy = 11;
  //备注
  TranslationStruct RemarkTranslation = 12;
  //ConferenceId
  string ConferenceId = 13;
  //会议名称
  string ConferenceName = 14;
  //是否是演讲人
  bool IsSpeaker = 15;
  //合同大类Code
  string CTypeCode = 16;
  //是否赠送
  bool IsGive = 17;
  //年份
  string Year = 18;
  //说明Code
  string RemarkCode = 19;
}

message ServicePackStruct {
  //主键
  string ServicePackId = 1;
  //主键
  TranslationStruct Translation = 2;
  //主键
  string PriceRMB = 3;
  //主键
  string PriceUSD = 4;
  string CreatedOn = 5;
  string CreatedBy = 6;
  string ModefieldOn = 7;
  string ModefieldBy = 8;
  //ConferenceId
  string ConferenceId = 9;
  //ConferenceName
  string ConferenceName = 10;
  //SessionConferenceId
  string SessionConferenceId = 11;
  //SessionConferenceName
  string SessionConferenceName = 12;
  //SessionDate
  string SessionDate = 13;
  //SessionStartTime
  string SessionStartTime = 14;
  //ThirdSessionConferenceId
  string ThirdSessionConferenceId = 15;
  //ThirdSessionConferenceName
  string ThirdSessionConferenceName = 16;
  //地址
  string SessionAddress = 17;
  //年份
  string Year = 18;
}
message ActivityStruct {
  string ActivityId = 1;
  TranslationStruct ActivityName = 2;
  string SessionConferenceID = 3;
  TranslationStruct SessionConferenceName = 4;
  int32 Sort = 5;
  string SessionIDs = 6;
}

message CompanyStruct {
  string CompanyPK = 1;
  string CompanyTypePK = 2;
  string IndustryTypePK = 3;
  string MemberPK = 4;
  string ComNameCn = 5;
  string ComNameEn = 6;
  string ComAreaDetail = 7;
  string ComContactEmail = 8;
  string ComPostCode = 9;
  string ComFax = 10;
  string ComTel = 11;
  string ComWebSite = 12;
  string ComClient = 13;
  string ComNature = 14;
  string ComLang = 15;
  string ComRemark = 16;
  bool ComIsDelete = 17;
  bool ComIsVerify = 18;
  bool ComIsWebSite = 19;
  string ComAddress = 20;
  string CreatedOn = 21;
  string CreatedBy = 22;
  string ModefieldOn = 23;
  string ModefieldBy = 24;
}

message MemberStruct {
  string MemberPK = 1;
  string SourcePK = 2;
  string MemNameCn = 3;
  string MemNameEn = 4;
  string MemEmail = 5;
  string MemPassword = 6;
  string MemType = 7;
  string MemGender = 8;
  string MemDepartment = 9;
  string MemTitle = 10;
  string MemPosition = 11;
  string MemProTitle = 12;
  string MemQQ = 13;
  string MemFax = 14;
  string MemMSN = 15;
  string MemMobile = 16;
  string MemTel = 17;
  string MemPostCode = 18;
  string MemLastLoginTime = 19;
  string MemAddress = 20;
  string MemAddressDetail = 21;
  bool MemIsDelete = 22;
  bool MemIsActivation = 23;
  string CreatedOn = 24;
  string CreatedBy = 25;
  string ModefieldOn = 26;
  string ModefieldBy = 27;
  string CompanyPK = 28;
  string MemCountryNameCn = 29;
  string MemCountryNameEn = 30;
  string MemCompany = 31;
  string AssistantName = 32;
  string AssistantPosition = 33;
  string AssistantMobile = 34;
  string AssistantEmail = 35;
}

message ParticipantStruct{
	//嘉宾id
	string ParticipantID = 1;
	//嘉宾名称
	string ParticipantNameTranslation = 2;
	//头像路劲
	string IMGSRC = 3;
	//公司名称
	string CompanyTranslation = 4;
	//职称
	string JobTranslation = 5;
	//国家
	string CountryTranslation = 6;
	//邮箱
	string Email = 7;
	//手机
	string Mobile = 8;
	//简介
	string IntroduceTranslation = 9;
	//创建时间
	string CreatedOn = 10;
	//创建人
	string CreatedBy = 11;
	//修改时间
	string ModifiedOn = 12;
	//修改人
	string ModifiedBy = 13;
	//个人合同id
	string PersonContractID = 14;
	//个人合同号
	string PerContractNumber = 15;
	//是否删除
	bool IsDelete = 16;
	//排序
	int32 Sort = 17;
	//业务员id
	string Owerid = 18;
	//业务员
	string Ower = 19;
	//称谓
	string AppellationTranslation = 20;		
	//公司id
	string CompanyId = 21;
	//是否提交ppt
	bool ConfirmPPT = 22;
	//人员id
	string MemberPK = 23;
	//受否前台显示
	int32 ShowOnFont = 24;
	//年份
	string Year = 25;
}

message ActivityStruct1{
	//活动主键id
	string ActivityID = 1;
	//会议id
	string ConferenceID = 2;
	//活动类型id
	string ActivityTypeID = 3;
	//时长
	string TimeLength = 4;
	//排序
	int32 Sort = 5;
	//开始日期
	string StartDate = 6;
	//活动名称
	Translation Translation = 7;
	//创建时间
	string CreatedOn = 8;
	//创建人
	string CreatedBy = 9;
	//修改时间
	string ModifiedOn = 10;
	//修改人
	string ModifiedBy = 11;
	//开始时间
	string StartTime = 12;
	//结束时间
	string EndTime = 13;

}



message TalkStruct{
	//板块id
	string TalkID = 1;
	//活动id
	string ActivityID = 2;
	//板块类型id
	string TalkTypeID = 3;
	//议题id
	string CFTopicPK =4; 
	//板块名称
	Translation Translation = 6;
	//创建时间
	string CreatedOn = 7;
	//创建人
	string CreatedBy = 8;
	//修改时间
	string ModifiedOn = 9;
	//修改人
	string ModifiedBy = 10;
	//开始日期
	string StartDate = 11;
	//时长
	string TimeLength = 12;
	//排序
	int32 Sort = 13;
	//开始时间
	string StartTime = 14;
	//结束时间
	string EndTime = 15;
	//议题名称
	string CFTopicName = 16;
}

message ParticipantInfoStruct{
	//嘉宾名称
	string ParticipantNameTranslation = 1;
	//公司名称
	string CompanyTranslation = 2;
	//职称
	string JobTranslation = 3;
	//国家
	string CountryTranslation = 4;
	//称谓
	string AppellationTranslation = 5;
	//嘉宾类型
	string ParticipantTypeTranslation = 6;
	//嘉宾id
	string ParticipantID = 7;
	//嘉宾类型id
	string ParticipantTypeID = 8;
	//邮箱
	string EMail = 9;
	//手机
	string Mobile = 10;
}

message new_GetCompanyNoticeOfReportByContractNumberResponse{
	//会议集合
	repeated ConferenceStruct ConferenceStructListdata = 1;

	//会议地点集合
	repeated CFAddressStruct CFAddressStructListdata = 2;

	repeated ApplyConferenceStruct ApplyConferenceStructListdata = 3;

	repeated CompanyContractStruct CompanyContractStructListdata = 4;

	//公司套餐对象
	repeated CompanyServicePackStruct CompanyServicePackStructListdata = 5;

	//子套餐列表
	repeated ServicePackStruct servicepack_listdata = 6;

	//ServicePack对象
	//repeated ServicePackStruct ServicePackListdata = 7;

	//Activity列表
	repeated ActivityStruct1 activity_listdata = 7;

	repeated CompanyStruct CompanyStructListdata = 8;

	repeated MemberStruct MemberStructListdata = 9;

	repeated ParticipantStruct ParticipantStructListdata=10;

	repeated ActivityStruct ActivityStructList=11;

	repeated ParticipantInfoStruct ParticipantInfoStructList=12;

	repeated TalkStruct TalkStructList=13;



//	//合同号
//	string contractNumber=1;
//	//姓名
//	string Name=2;
//	//参会类型
//	string servicePack=3;
//	//费用
//	string fee=4;
//	//Calender名称
//	string calenderName=5;
//	//calender日期
//	string calenderDateTime=6;
//	//calender地点
//	string calenderVune=7;
//	//业务员
//	string owner=8;
//	//业务员邮件
//	string ownerEmail=9;
//	//业务员电话
//	string ownerMobile=10;
//	//业务员地址
//	string ownerAddress=11;
// //创建人
// string createdBy=12;
// //创建时间
// string createdOn=13;
// //修改人
// string modifiyBy=14;
// //修改时间
// string modifyOn=15;
}


message new_GetPersonNoticeOfReportByContractNumberRequest{
 //个人合同号
 string personContractNumber=1;
}

message new_GetPersonNoticeOfReportByContractNumberResponse{
 //合同号
 string contractNumber=1;
 //姓名
 string name=2;
 //公司名
 string companyName=3;
 //参会类型
 string servicePack=4;
 //费用
 float fee=5;
 //总金额
 float total=6;
 //活动名称
 string activityName=7;
 //活动地点
 string activityVune=8;
 //活动时间
 string activityTime=9;
 //业务员
 string owner=10;
 //业务员电话
 string ownerMobile=11;
 //业务员邮箱
 string ownerEmail=12;
 //业务员地址
 string ownerAddress=13;
  //创建人
  string createdBy=14;
  //创建时间
  string createdOn=15;
  //修改人
  string modifiyBy=16;
  //修改时间
  string modifyOn=17;
}

//需要完善
message new_CompanyNameRequest{
  string name=1;
}

message Translation{
	string CN = 1;
	string EN = 2;
	string JP = 3;
}
message TranslationStruct{
    string CN = 1;
	string EN = 2;
	string JP = 3;
}

message ComNameTranslationStruct{
	string CompanyCN = 1;
	string CompanyEN = 2;
}

message AddressTranslationStruct{
	string AddressCN = 1;
	string AddressEN = 2;
}

message DelegateServicePackDiscountStruct {
  //主键
  string DiscountId = 1;
  //ContractId
  string ContractId = 2;
  //人民币
  string PriceAfterDiscountRMB = 3;
  //美金
  string PriceAfterDiscountUSD = 4;
  string CreatedOn = 5;
  string CreatedBy = 6;
  string ModefieldOn = 7;
  string ModefieldBy = 8;
  string Year = 9;
}

message PersonContractStruct {
  //主键
  string PersonContractId = 1;
  //ContractId
  string ContractId = 2;
  //个人合同号
  string PerContractNumber = 3;
  //MemberPK
  string MemberPK = 4;
  //会员姓名
  MemTranslationStruct MemTranslation = 5;
  //是否删除
  bool PCIsdelete = 6;
  string CreatedOn = 7;
  string CreatedBy = 8;
  string ModefieldOn = 9;
  string ModefieldBy = 10;
  //业务员id
  string Owerid = 11; 
  //业务员姓名
  string Ower = 12; 
  //ConferenceContractId
  string ConferenceContractId = 13;
  //ContractType合同大类
  string CTypeCode = 14;
  //二级合同对象
  CompanyContractStruct CompanyContract = 15;
  //是否报道
  bool IsCheckIn = 16;
  //是否发送Email
  bool IsSendEmail = 17;
  //是否修改
  bool IsModify = 18;
  //ConferenceId
  string ConferenceId = 19;
  //是否有财务记录
  bool IsFianceRecord = 20;
  //是否是邀请码创建合同
  bool IsInviteCode = 21;
  //InviteCodeId邀请码Id
  string InviteCodeId = 22;
  //是否提交摘要
  bool IsCommitAbstract = 23;
  //是否打印
  bool IsPrint = 24;
  //已付金额
  string PaidAmount = 25;
}

message MemTranslationStruct{
	string MemberCN = 1;
	string MemberEN = 2;
}

//勾选套餐时要传的参数
message new_GetServicePackRequest{
string ConferenceId=1;
string ContractTypeId=2;
string Year=3;
string IsGive=4;
}
//勾选套餐时返回的对象
message new_GetServicePackStruct{
  string CompanyServicePackId=1;
  string Code=2;
  string Translation=3;
  string PriceRMB=4;
  string PriceUSD=5;
  string PriceJP=6;
  bool IsGive=7;
  string Year=8;
}
message new_GetServicePackResponse{
  repeated new_GetServicePackStruct listdata=1;
}
//=================v2.0 End==============






